created all_metadata function in core

--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -34,7 +34,9 @@
     "#| export\n",
     "from importlib import import_module\n",
     "from inspect import signature\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "\n",
+    "from finsets import wrds"
    ]
   },
   {
@@ -44,10 +46,12 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "# Go through all the submodules of finsets, and collect metadata from all functions that have `return_metadata` parameter\n",
-    "def metadata():\n",
+    "def features_metadata(submodules: list=['wrds', 'papers'] # list of submodules to collect metadata from\n",
+    "                      ) -> pd.DataFrame:\n",
+    "    \"Go through `submodules` of `finsets` and collect metadata from all functions that have `return_metadata` parameter\"\n",
+    "    \n",
     "    df = pd.DataFrame(columns=['name','label','output_of','inputs','inputs_generated_by'])\n",
-    "    for name in ['wrds', 'papers']:\n",
+    "    for name in submodules:\n",
     "        module = import_module(f'finsets.{name}')\n",
     "        for sub in dir(module):\n",
     "            if sub.startswith('_'): continue\n",
@@ -69,7 +73,7 @@
     "                                                'inputs':','.join(meta['inputs'][input_name]),\n",
     "                                                'inputs_generated_by':input_name}, index=[0])\n",
     "                                df = pd.concat([df,new_meta],ignore_index=True)\n",
-    "    return df\n"
+    "    return df"
    ]
   },
   {
@@ -333,7 +337,401 @@
     }
    ],
    "source": [
-    "metadata()"
+    "features_metadata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def raw_metadata(submodules=['wrds', 'papers']\n",
+    "                ) -> pd.DataFrame:\n",
+    "    \"Go through `submodules` of `finsets` and collect metadata from `raw_metadata` functions (if present)\"\n",
+    "\n",
+    "    df = pd.DataFrame(columns=['name','label','output_of','type'])\n",
+    "    for name in submodules:\n",
+    "        module = import_module(f'finsets.{name}')\n",
+    "        for sub in dir(module):\n",
+    "            if sub.startswith('_'): continue\n",
+    "            submodule = import_module(f'finsets.{name}.{sub}')\n",
+    "            if 'raw_metadata' in submodule.__all__:\n",
+    "                df = pd.concat([df,submodule.raw_metadata()],ignore_index=True)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>label</th>\n",
+       "      <th>output_of</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>gvkey</td>\n",
+       "      <td>Global Company Key</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>conm</td>\n",
+       "      <td>Company Name</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>tic</td>\n",
+       "      <td>Ticker Symbol</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>cusip</td>\n",
+       "      <td>CUSIP</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>cik</td>\n",
+       "      <td>CIK Number</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>string</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1031</th>\n",
+       "      <td>vwretd</td>\n",
+       "      <td>Value-Weighted Return (includes distributions)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1032</th>\n",
+       "      <td>vwretx</td>\n",
+       "      <td>Value-Weighted Return (excluding dividends)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1033</th>\n",
+       "      <td>ewretd</td>\n",
+       "      <td>Equal-Weighted Return (includes distributions)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1034</th>\n",
+       "      <td>ewretx</td>\n",
+       "      <td>Equal-Weighted Return (excluding dividends)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1035</th>\n",
+       "      <td>sprtrn</td>\n",
+       "      <td>Return on S&amp;P Composite Index</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1036 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        name                                            label  \\\n",
+       "0      gvkey                              Global Company Key    \n",
+       "1       conm                                    Company Name    \n",
+       "2        tic                                   Ticker Symbol    \n",
+       "3      cusip                                           CUSIP    \n",
+       "4        cik                                      CIK Number    \n",
+       "...      ...                                              ...   \n",
+       "1031  vwretd  Value-Weighted Return (includes distributions)    \n",
+       "1032  vwretx     Value-Weighted Return (excluding dividends)    \n",
+       "1033  ewretd  Equal-Weighted Return (includes distributions)    \n",
+       "1034  ewretx     Equal-Weighted Return (excluding dividends)    \n",
+       "1035  sprtrn                   Return on S&P Composite Index    \n",
+       "\n",
+       "             output_of    type  \n",
+       "0     wrds.compa.clean  string  \n",
+       "1     wrds.compa.clean  string  \n",
+       "2     wrds.compa.clean  string  \n",
+       "3     wrds.compa.clean  string  \n",
+       "4     wrds.compa.clean  string  \n",
+       "...                ...     ...  \n",
+       "1031  wrds.crspm.clean  double  \n",
+       "1032  wrds.crspm.clean  double  \n",
+       "1033  wrds.crspm.clean  double  \n",
+       "1034  wrds.crspm.clean  double  \n",
+       "1035  wrds.crspm.clean  double  \n",
+       "\n",
+       "[1036 rows x 4 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_metadata()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#| export\n",
+    "def all_metadata(submodules=['wrds', 'papers']\n",
+    "                ) -> pd.DataFrame:\n",
+    "    \"Collects `raw_metadata` and `features_metadata` from `submodules` of `finsets`\"\n",
+    "\n",
+    "    return pd.concat([features_metadata(submodules), raw_metadata(submodules)], ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>label</th>\n",
+       "      <th>output_of</th>\n",
+       "      <th>inputs</th>\n",
+       "      <th>inputs_generated_by</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bookeq</td>\n",
+       "      <td>Book equity</td>\n",
+       "      <td>wrds.compa.book_equity</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>shreq</td>\n",
+       "      <td>Shareholder equity</td>\n",
+       "      <td>wrds.compa.book_equity</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>pref_stock</td>\n",
+       "      <td>Preferred stock</td>\n",
+       "      <td>wrds.compa.book_equity</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>tobinq</td>\n",
+       "      <td>Tobin Q</td>\n",
+       "      <td>wrds.compa.tobin_q</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,pr...</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>equityiss_tot</td>\n",
+       "      <td>Equity issuance</td>\n",
+       "      <td>wrds.compa.issuance_vars</td>\n",
+       "      <td>at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1050</th>\n",
+       "      <td>vwretd</td>\n",
+       "      <td>Value-Weighted Return (includes distributions)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1051</th>\n",
+       "      <td>vwretx</td>\n",
+       "      <td>Value-Weighted Return (excluding dividends)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1052</th>\n",
+       "      <td>ewretd</td>\n",
+       "      <td>Equal-Weighted Return (includes distributions)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1053</th>\n",
+       "      <td>ewretx</td>\n",
+       "      <td>Equal-Weighted Return (excluding dividends)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1054</th>\n",
+       "      <td>sprtrn</td>\n",
+       "      <td>Return on S&amp;P Composite Index</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>double</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1055 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               name                                            label  \\\n",
+       "0            bookeq                                      Book equity   \n",
+       "1             shreq                               Shareholder equity   \n",
+       "2        pref_stock                                  Preferred stock   \n",
+       "3            tobinq                                          Tobin Q   \n",
+       "4     equityiss_tot                                  Equity issuance   \n",
+       "...             ...                                              ...   \n",
+       "1050         vwretd  Value-Weighted Return (includes distributions)    \n",
+       "1051         vwretx     Value-Weighted Return (excluding dividends)    \n",
+       "1052         ewretd  Equal-Weighted Return (includes distributions)    \n",
+       "1053         ewretx     Equal-Weighted Return (excluding dividends)    \n",
+       "1054         sprtrn                   Return on S&P Composite Index    \n",
+       "\n",
+       "                     output_of  \\\n",
+       "0       wrds.compa.book_equity   \n",
+       "1       wrds.compa.book_equity   \n",
+       "2       wrds.compa.book_equity   \n",
+       "3           wrds.compa.tobin_q   \n",
+       "4     wrds.compa.issuance_vars   \n",
+       "...                        ...   \n",
+       "1050          wrds.crspm.clean   \n",
+       "1051          wrds.crspm.clean   \n",
+       "1052          wrds.crspm.clean   \n",
+       "1053          wrds.crspm.clean   \n",
+       "1054          wrds.crspm.clean   \n",
+       "\n",
+       "                                                 inputs inputs_generated_by  \\\n",
+       "0           at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb    wrds.compa.clean   \n",
+       "1           at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb    wrds.compa.clean   \n",
+       "2           at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb    wrds.compa.clean   \n",
+       "3     at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,pr...    wrds.compa.clean   \n",
+       "4     at,lt,seq,ceq,txditc,pstk,pstkrv,pstkl,itcb,ss...    wrds.compa.clean   \n",
+       "...                                                 ...                 ...   \n",
+       "1050                                                NaN                 NaN   \n",
+       "1051                                                NaN                 NaN   \n",
+       "1052                                                NaN                 NaN   \n",
+       "1053                                                NaN                 NaN   \n",
+       "1054                                                NaN                 NaN   \n",
+       "\n",
+       "        type  \n",
+       "0        NaN  \n",
+       "1        NaN  \n",
+       "2        NaN  \n",
+       "3        NaN  \n",
+       "4        NaN  \n",
+       "...      ...  \n",
+       "1050  double  \n",
+       "1051  double  \n",
+       "1052  double  \n",
+       "1053  double  \n",
+       "1054  double  \n",
+       "\n",
+       "[1055 rows x 6 columns]"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_metadata()"
    ]
   },
   {
