--- a/nbs/01_wrds/01_crspm.ipynb
+++ b/nbs/01_wrds/01_crspm.ipynb
@@ -54,16 +54,18 @@
    "outputs": [],
    "source": [
     "#| export \n",
-    "def variable_labels(rawfile: str|Path=RESOURCES/'crspm_variable_descriptions.csv', # location of the raw variable labels file\n",
+    "def raw_metadata(rawfile: str|Path=RESOURCES/'crspm_variable_descriptions.csv', # location of the raw variable labels file\n",
     "             ) -> pd.DataFrame:\n",
     "    \"Loads raw variable labels file, cleans it and returns it as a pd.DataFrame\"\n",
     "\n",
     "    df = pd.read_csv(rawfile)\n",
+    "    df['output_of'] = 'wrds.crspm.clean'\n",
+    "\n",
     "    df['Variable Label'] = df.apply(lambda row: row['Description'].replace(row['Variable Name'].strip()+' -- ', ''), axis=1)\n",
     "    df['Variable Label'] = df.apply(lambda row: row['Variable Label'].replace( '(' + row['Variable Name'].strip() + ')', ''), axis=1)\n",
     "    df['Variable Name'] = df['Variable Name'].str.strip().str.lower()\n",
-    "    df = df[['Variable Name', 'Variable Label', 'Type']].copy()\n",
-    "    df.columns = ['name','label','type']\n",
+    "    df = df[['Variable Name', 'Variable Label','output_of', 'Type']].copy()\n",
+    "    df.columns = ['name','label','output_of','type']\n",
     "    return df"
    ]
   },
@@ -95,6 +97,7 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "      <th>label</th>\n",
+       "      <th>output_of</th>\n",
        "      <th>type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -103,34 +106,40 @@
        "      <th>0</th>\n",
        "      <td>cusip</td>\n",
        "      <td>Cusip</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
        "      <td>string</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ncusip</td>\n",
        "      <td>Ncusip</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
        "      <td>string</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>comnam</td>\n",
        "      <td>Company Name</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
        "      <td>string</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>ticker</td>\n",
        "      <td>Ticker</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
        "      <td>string</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>permco</td>\n",
        "      <td>CRSP Permanent Company Number</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -139,52 +148,70 @@
        "      <th>57</th>\n",
        "      <td>vwretd</td>\n",
        "      <td>Value-Weighted Return (includes distributions)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>58</th>\n",
        "      <td>vwretx</td>\n",
        "      <td>Value-Weighted Return (excluding dividends)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
        "      <td>ewretd</td>\n",
        "      <td>Equal-Weighted Return (includes distributions)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>60</th>\n",
        "      <td>ewretx</td>\n",
        "      <td>Equal-Weighted Return (excluding dividends)</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>61</th>\n",
        "      <td>sprtrn</td>\n",
        "      <td>Return on S&amp;P Composite Index</td>\n",
+       "      <td>wrds.crspm.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>62 rows × 3 columns</p>\n",
+       "<p>62 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      name                                            label    type\n",
-       "0    cusip                                           Cusip   string\n",
-       "1   ncusip                                          Ncusip   string\n",
-       "2   comnam                                    Company Name   string\n",
-       "3   ticker                                          Ticker   string\n",
-       "4   permco                   CRSP Permanent Company Number   double\n",
-       "..     ...                                              ...     ...\n",
-       "57  vwretd  Value-Weighted Return (includes distributions)   double\n",
-       "58  vwretx     Value-Weighted Return (excluding dividends)   double\n",
-       "59  ewretd  Equal-Weighted Return (includes distributions)   double\n",
-       "60  ewretx     Equal-Weighted Return (excluding dividends)   double\n",
-       "61  sprtrn                   Return on S&P Composite Index   double\n",
+       "      name                                            label         output_of  \\\n",
+       "0    cusip                                           Cusip   wrds.crspm.clean   \n",
+       "1   ncusip                                          Ncusip   wrds.crspm.clean   \n",
+       "2   comnam                                    Company Name   wrds.crspm.clean   \n",
+       "3   ticker                                          Ticker   wrds.crspm.clean   \n",
+       "4   permco                   CRSP Permanent Company Number   wrds.crspm.clean   \n",
+       "..     ...                                              ...               ...   \n",
+       "57  vwretd  Value-Weighted Return (includes distributions)   wrds.crspm.clean   \n",
+       "58  vwretx     Value-Weighted Return (excluding dividends)   wrds.crspm.clean   \n",
+       "59  ewretd  Equal-Weighted Return (includes distributions)   wrds.crspm.clean   \n",
+       "60  ewretx     Equal-Weighted Return (excluding dividends)   wrds.crspm.clean   \n",
+       "61  sprtrn                   Return on S&P Composite Index   wrds.crspm.clean   \n",
        "\n",
-       "[62 rows x 3 columns]"
+       "      type  \n",
+       "0   string  \n",
+       "1   string  \n",
+       "2   string  \n",
+       "3   string  \n",
+       "4   double  \n",
+       "..     ...  \n",
+       "57  double  \n",
+       "58  double  \n",
+       "59  double  \n",
+       "60  double  \n",
+       "61  double  \n",
+       "\n",
+       "[62 rows x 4 columns]"
       ]
      },
      "execution_count": null,
@@ -193,7 +220,15 @@
     }
    ],
    "source": [
-    "variable_labels()"
+    "raw_metadata()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following function gives more detailed metadata but requires connecting to WRDS. If all you want is variable names and labels, then `raw_metadata` is sufficient."
    ]
   },
   {
@@ -203,7 +238,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def metadata(wrds_username: str=None\n",
+    "def raw_metadata_extra(wrds_username: str=None\n",
     "             ) -> pd.DataFrame:\n",
     "    \"Collects metadata from WRDS `crsp.msf` and `crsp.msenames` tables and merges it with `variable_labels`.\"\n",
     "\n",
@@ -228,7 +263,7 @@
     "    mse_meta['wrds_table'] = 'msenames'\n",
     "\n",
     "    crsp_meta = (pd.concat([msf_meta, mse_meta],axis=0, ignore_index=True)\n",
-    "                .merge(variable_labels()[['name','label']], how='left', on='name'))\n",
+    "                .merge(raw_metadata()[['name','label']], how='left', on='name'))\n",
     "    \n",
     "    crsp_meta['output_of'] = 'wrds.crspm.download()'\n",
     "    crsp_meta = pdm.order_columns(crsp_meta,these_first=['name','label','output_of'])\n",
@@ -805,7 +840,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "metadata()"
+    "raw_metadata_extra()"
    ]
   },
   {
