--- a/nbs/01_wrds/03_compa.ipynb
+++ b/nbs/01_wrds/03_compa.ipynb
@@ -54,16 +54,18 @@
    "outputs": [],
    "source": [
     "#| export \n",
-    "def variable_labels(rawfile: str|Path=RESOURCES/'compa_variable_descriptions.csv', # location of the raw variable labels file\n",
+    "def raw_metadata(rawfile: str|Path=RESOURCES/'compa_variable_descriptions.csv', # location of the raw variable labels file\n",
     "             ) -> pd.DataFrame:\n",
     "    \"Loads raw variable labels file, cleans it and returns it as a pd.DataFrame\"\n",
     "\n",
     "    df = pd.read_csv(rawfile)\n",
+    "    df['output_of'] = 'wrds.compa.clean'\n",
+    "\n",
     "    df['Variable Label'] = df.apply(lambda row: row['Description'].replace(row['Variable Name'].strip()+' -- ', ''), axis=1)\n",
     "    df['Variable Label'] = df.apply(lambda row: row['Variable Label'].replace( '(' + row['Variable Name'].strip() + ')', ''), axis=1)\n",
     "    df['Variable Name'] = df['Variable Name'].str.strip().str.lower()\n",
-    "    df = df[['Variable Name', 'Variable Label', 'Type']].copy()\n",
-    "    df.columns = ['name','label','type']\n",
+    "    df = df[['Variable Name', 'Variable Label', 'output_of', 'Type']].copy()\n",
+    "    df.columns = ['name','label','output_of','type']\n",
     "    return df"
    ]
   },
@@ -95,6 +97,7 @@
        "      <th></th>\n",
        "      <th>name</th>\n",
        "      <th>label</th>\n",
+       "      <th>output_of</th>\n",
        "      <th>type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -103,34 +106,40 @@
        "      <th>0</th>\n",
        "      <td>gvkey</td>\n",
        "      <td>Global Company Key</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
        "      <td>string</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>conm</td>\n",
        "      <td>Company Name</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
        "      <td>string</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>tic</td>\n",
        "      <td>Ticker Symbol</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
        "      <td>string</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>cusip</td>\n",
        "      <td>CUSIP</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
        "      <td>string</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>cik</td>\n",
        "      <td>CIK Number</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
        "      <td>string</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -139,52 +148,70 @@
        "      <th>969</th>\n",
        "      <td>prch_c</td>\n",
        "      <td>Price High - Annual - Calendar</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>970</th>\n",
        "      <td>prch_f</td>\n",
        "      <td>Price High - Annual - Fiscal</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>971</th>\n",
        "      <td>prcl_c</td>\n",
        "      <td>Price Low - Annual - Calendar</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>972</th>\n",
        "      <td>prcl_f</td>\n",
        "      <td>Price Low - Annual - Fiscal</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>973</th>\n",
        "      <td>sich</td>\n",
        "      <td>Standard Industrial Classification - Historical</td>\n",
+       "      <td>wrds.compa.clean</td>\n",
        "      <td>double</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>974 rows × 3 columns</p>\n",
+       "<p>974 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       name                                             label    type\n",
-       "0     gvkey                               Global Company Key   string\n",
-       "1      conm                                     Company Name   string\n",
-       "2       tic                                    Ticker Symbol   string\n",
-       "3     cusip                                            CUSIP   string\n",
-       "4       cik                                       CIK Number   string\n",
-       "..      ...                                               ...     ...\n",
-       "969  prch_c                   Price High - Annual - Calendar   double\n",
-       "970  prch_f                     Price High - Annual - Fiscal   double\n",
-       "971  prcl_c                    Price Low - Annual - Calendar   double\n",
-       "972  prcl_f                      Price Low - Annual - Fiscal   double\n",
-       "973    sich  Standard Industrial Classification - Historical   double\n",
+       "       name                                             label  \\\n",
+       "0     gvkey                               Global Company Key    \n",
+       "1      conm                                     Company Name    \n",
+       "2       tic                                    Ticker Symbol    \n",
+       "3     cusip                                            CUSIP    \n",
+       "4       cik                                       CIK Number    \n",
+       "..      ...                                               ...   \n",
+       "969  prch_c                   Price High - Annual - Calendar    \n",
+       "970  prch_f                     Price High - Annual - Fiscal    \n",
+       "971  prcl_c                    Price Low - Annual - Calendar    \n",
+       "972  prcl_f                      Price Low - Annual - Fiscal    \n",
+       "973    sich  Standard Industrial Classification - Historical    \n",
        "\n",
-       "[974 rows x 3 columns]"
+       "            output_of    type  \n",
+       "0    wrds.compa.clean  string  \n",
+       "1    wrds.compa.clean  string  \n",
+       "2    wrds.compa.clean  string  \n",
+       "3    wrds.compa.clean  string  \n",
+       "4    wrds.compa.clean  string  \n",
+       "..                ...     ...  \n",
+       "969  wrds.compa.clean  double  \n",
+       "970  wrds.compa.clean  double  \n",
+       "971  wrds.compa.clean  double  \n",
+       "972  wrds.compa.clean  double  \n",
+       "973  wrds.compa.clean  double  \n",
+       "\n",
+       "[974 rows x 4 columns]"
       ]
      },
      "execution_count": null,
@@ -193,7 +220,15 @@
     }
    ],
    "source": [
-    "variable_labels()"
+    "raw_metadata()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following function gives more detailed metadata but requires connecting to WRDS. If all you want is variable names and labels, then `raw_metadata` is sufficient."
    ]
   },
   {
@@ -203,7 +238,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def metadata(wrds_username: str=None\n",
+    "def raw_metadata_extra(wrds_username: str=None\n",
     "             ) -> pd.DataFrame:\n",
     "    \"Collects metadata from WRDS `comp.funda` table and merges it with `variable_labels`.\"\n",
     "\n",
@@ -220,7 +255,7 @@
     "    meta['wrds_library'] = 'comp'\n",
     "    meta['wrds_table'] = 'funda'\n",
     "\n",
-    "    meta = meta.merge(variable_labels()[['name','label']], how='left', on='name')\n",
+    "    meta = meta.merge(raw_metadata()[['name','label']], how='left', on='name')\n",
     "    \n",
     "    meta['output_of'] = 'wrds.compa.download'\n",
     "    meta = pdm.order_columns(meta,these_first=['name','label','output_of'])\n",
@@ -427,7 +462,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "metadata()"
+    "raw_metadata_extra()"
    ]
   },
   {
@@ -512,7 +547,7 @@
    ],
    "source": [
     "#| eval: false\n",
-    "raw = download(start_date='01/01/2010')"
+    "raw = download()"
    ]
   },
   {
