--- a/nbs/00_core.ipynb
+++ b/nbs/00_core.ipynb
@@ -347,7 +347,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def raw_metadata(submodules=['wrds', 'papers']\n",
+    "def raw_metadata(submodules=['wrds', 'papers'] # list of submodules to collect metadata from\n",
     "                ) -> pd.DataFrame:\n",
     "    \"Go through `submodules` of `finsets` and collect metadata from `raw_metadata` functions (if present)\"\n",
     "\n",
@@ -523,7 +523,7 @@
    "outputs": [],
    "source": [
     "#| export\n",
-    "def all_metadata(submodules=['wrds', 'papers']\n",
+    "def all_metadata(submodules=['wrds', 'papers'] # list of submodules to collect metadata from\n",
     "                ) -> pd.DataFrame:\n",
     "    \"Collects `raw_metadata` and `features_metadata` from `submodules` of `finsets`\"\n",
     "\n",
